--- a/hirola/front/static/front/css/landing_page.css
+++ b/hirola/front/static/front/css/landing_page.css
@@ -1,6 +1,6 @@
 html,
 body {
-    /* height: 100%; */
+    height: 100%;
     /* margin: 0;
     padding: 0; */
     /* flex: 1; */
@@ -9,24 +9,29 @@ body {
 }
 
 .carousel {
-    height: 92vh;
-    /* background-size: 100vh; */
-    /* background-color: indigo; */
+    /* height: 94vh; */
+    /* flex: 2;
+    overflow: hidden; */
+    /* margin-bottom: 0!important; */
+    background-color: rebeccapurple;
+    /* display: table-row; */
+    height: auto;
+    height: 93.5vh;
 }
 
 .carousel-item {
-    height: 100vh;
+    /* height: 100vh; */
+    /* height: 100%; */
     /* padding-top: 50px; */
-    margin-bottom: 0 !important;
+    /* margin-bottom: 0 !important; */
     background-size: cover;
 }
 
 .content {
-    /* height: 100vh; */
-}
-
-.bg-slideshow {
-    /* height: 100vh; */
+    background-color: green;
+    /* height: 93vh; */
+    margin-bottom: 0 !important;
+    /* display: table; */
 }
 
 .item-one {
